[package]
name = "common-error"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
headers.workspace = true
http.workspace = true
snafu.workspace = true
strum.workspace = true
tonic.workspace = true
unescaper = "0.1.5"
